fix overflow

--- a/client/app/slides/components/editor/charts-builder/charts-builder.component.scss
+++ b/client/app/slides/components/editor/charts-builder/charts-builder.component.scss
@@ -234,9 +234,7 @@ $color-text-lighter: #fff;
   }
 }
 
-:host {
-  * .visible {
+:host /deep/ .visible {
     overflow-y: auto;
     max-height: 400px;
-  }
 }
